<resources>
    <string name="app_name">Geo Quiz</string>
    <string name="question_turkey">Constantinople is the largest city in Turkey.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="false_button">False</string>
    <string name="true_button">True</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="previous_button">PREV</string>
    <string name="no_more_questions">This is the last question. There aren\'t any more after</string>
    <string name="first_question">This is the first question. There aren\'t any more before</string>
    <string name="prev_button_description">the prev button</string>
    <string name="next_button_description">the next button</string>
    <string name="on_create_log">onCreate() called</string>
    <string name="on_stop_log">onStop() called</string>
    <string name="on_destroy_log">onDestroy() called</string>
    <string name="on_pause_log">onPause() called</string>
    <string name="on_resume_log">onResume() called</string>
    <string name="on_start_log">onStart() called</string>
    <string name="on_saved_instance_state">onSavedInstanceState</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast_incorrect">Cheating is wrong. </string>
    <string name="judgment_toast_correct">Cheating is right. </string>
    <string name="default_string"></string>
</resources>
